--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/node": "^2.16.5",
     "@remix-run/react": "^2.16.5",
     "@remix-run/serve": "^2.16.5",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.7.4",
     "isbot": "^4.1.0",
     "lucide-react": "^0.502.0",
